# simple-filepicker

./: LICENSE  README.md  file_picker.py  pyproject.toml
simplefilepicker/: __init__.py  filepicker.py
